--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .ai-chat {
+        @apply flex p-3 max-w-[75%] min-w-[33%] h-min bg-slate-200 rounded-md;
+    }
+
+    @keyframes typingDots {
+        0%,
+        80%,
+        100% {
+            opacity: 0.3;
+            transform: translateY(0);
+        }
+
+        40% {
+            opacity: 1;
+            transform: translateY(-3px);
+        }
+    }
+
+    .dot {
+        @apply w-1 h-1 bg-black rounded-full;
+        animation: typingDots 1.5s infinite;
+    }
+
+    .dot:nth-child(2) {
+        animation-delay: 0.2s;
+    }
+
+    .dot:nth-child(3) {
+        animation-delay: 0.4s;
+    }
+}
